library/general/gpunodetargeting/samples/gpu-pod-exempt/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuNodeTargeting
metadata:
  name: require-gpu-node-targeting
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    nodeLabelKey: "nvidia.com/gpu.present"
    nodeLabelValues:
      - "true"
    exemptImages:
      - "nvidia/dcgm-exporter:*"
