library/general/gpunodetargeting/samples/gpu-pod-with-node-affinity/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod-with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: In
                values:
                  - "true"
  containers:
    - name: training
      image: nvidia/cuda:12.0-runtime
      resources:
        limits:
          nvidia.com/gpu: "1"
