library/general/gpunodetargeting/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: gpunodetargeting
tests:
- name: gpu-pod-with-node-affinity
  template: template.yaml
  constraint: samples/gpu-pod-with-node-affinity/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-pod-with-node-affinity/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed-wrong-value
    object: samples/gpu-pod-with-node-affinity/example_disallowed_wrong_value.yaml
    assertions:
    - violations: yes
  - name: example-disallowed-mixed-values
    object: samples/gpu-pod-with-node-affinity/example_disallowed_mixed_values.yaml
    assertions:
    - violations: yes
- name: gpu-pod-with-node-selector
  template: template.yaml
  constraint: samples/gpu-pod-with-node-selector/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-pod-with-node-selector/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-pod-without-targeting
  template: template.yaml
  constraint: samples/gpu-pod-without-targeting/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-pod-without-targeting/example_disallowed.yaml
    assertions:
    - violations: yes
- name: non-gpu-pod
  template: template.yaml
  constraint: samples/non-gpu-pod/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/non-gpu-pod/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-pod-node-selector-key-only
  template: template.yaml
  constraint: samples/gpu-pod-node-selector-key-only/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-pod-node-selector-key-only/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed-empty-value
    object: samples/gpu-pod-node-selector-key-only/example_disallowed_empty_value.yaml
    assertions:
    - violations: yes
- name: gpu-pod-exempt
  template: template.yaml
  constraint: samples/gpu-pod-exempt/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-pod-exempt/example_allowed.yaml
    assertions:
    - violations: no
